// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lambda uninstrument execute aborts when every lambda function fails to update on uninstrument 1`] = `
"
🐶 Instrumenting Lambda function

[Warning] The environment, service and version tags have not been configured. Learn more about Datadog unified service tagging: https://docs.datadoghq.com/getting_started/tagging/unified_service_tagging/#serverless-environment.

[Warning] Couldn't add source code integration, continuing without it. Error: Couldn't get local git status.

[Warning] Instrument your Lambda functions in a dev or staging environment first. Should the instrumentation result be unsatisfactory, run \`uninstrument\` with the same arguments to revert the changes.

[!] Functions to be updated:
	- arn:aws:lambda:us-east-1:123456789012:function:lambda-1-us-east-1
	- arn:aws:lambda:us-east-2:123456789012:function:lambda-1-us-east-2

Will apply the following updates:
UpdateFunctionConfiguration -> arn:aws:lambda:us-east-1:123456789012:function:lambda-1-us-east-1
{
  "FunctionName": "arn:aws:lambda:us-east-1:123456789012:function:lambda-1-us-east-1",
  "Environment": {
    "Variables": {
      "DD_LAMBDA_HANDLER": "index.handler",
      "DD_SITE": "datadoghq.com",
      "DD_SERVERLESS_APPSEC_ENABLED": "false",
      "DD_CAPTURE_LAMBDA_PAYLOAD": "false",
      "DD_MERGE_XRAY_TRACES": "false",
      "DD_TRACE_ENABLED": "true",
      "DD_FLUSH_TO_LOG": "true"
    }
  }
}
TagResource -> arn:aws:lambda:us-east-1:123456789012:function:lambda-1-us-east-1
{
  "dd_sls_ci": "vXXXX"
}
UpdateFunctionConfiguration -> arn:aws:lambda:us-east-2:123456789012:function:lambda-1-us-east-2
{
  "FunctionName": "arn:aws:lambda:us-east-2:123456789012:function:lambda-1-us-east-2",
  "Environment": {
    "Variables": {
      "DD_LAMBDA_HANDLER": "index.handler",
      "DD_SITE": "datadoghq.com",
      "DD_SERVERLESS_APPSEC_ENABLED": "false",
      "DD_CAPTURE_LAMBDA_PAYLOAD": "false",
      "DD_MERGE_XRAY_TRACES": "false",
      "DD_TRACE_ENABLED": "true",
      "DD_FLUSH_TO_LOG": "true"
    }
  }
}
TagResource -> arn:aws:lambda:us-east-2:123456789012:function:lambda-1-us-east-2
{
  "dd_sls_ci": "vXXXX"
}
[Error] Failed updating arn:aws:lambda:us-east-1:123456789012:function:lambda-1-us-east-1 Error: Unexpected error updating request
[Error] Failed updating arn:aws:lambda:us-east-2:123456789012:function:lambda-1-us-east-2 Error: Unexpected error updating request
✖ Failed updating every Lambda function.

"
`;

exports[`lambda uninstrument execute prints which functions failed to uninstrument without aborting when at least one function was uninstrumented correctly 1`] = `
"
🐶 Instrumenting Lambda function

[Warning] The environment, service and version tags have not been configured. Learn more about Datadog unified service tagging: https://docs.datadoghq.com/getting_started/tagging/unified_service_tagging/#serverless-environment.

[Warning] Couldn't add source code integration, continuing without it. Error: Couldn't get local git status.

[Warning] Instrument your Lambda functions in a dev or staging environment first. Should the instrumentation result be unsatisfactory, run \`uninstrument\` with the same arguments to revert the changes.

[!] Functions to be updated:
	- arn:aws:lambda:us-east-1:123456789012:function:lambda-1-us-east-1
	- arn:aws:lambda:us-east-1:123456789012:function:lambda-2-us-east-1
	- arn:aws:lambda:us-east-1:123456789012:function:lambda-3-us-east-1
	- arn:aws:lambda:us-east-2:123456789012:function:lambda-1-us-east-2
	- arn:aws:lambda:us-east-2:123456789012:function:lambda-2-us-east-2
	- arn:aws:lambda:us-east-2:123456789012:function:lambda-3-us-east-2

Will apply the following updates:
UpdateFunctionConfiguration -> arn:aws:lambda:us-east-1:123456789012:function:lambda-1-us-east-1
{
  "FunctionName": "arn:aws:lambda:us-east-1:123456789012:function:lambda-1-us-east-1",
  "Environment": {
    "Variables": {
      "DD_LAMBDA_HANDLER": "index.handler",
      "DD_SITE": "datadoghq.com",
      "DD_SERVERLESS_APPSEC_ENABLED": "false",
      "DD_CAPTURE_LAMBDA_PAYLOAD": "false",
      "DD_MERGE_XRAY_TRACES": "false",
      "DD_TRACE_ENABLED": "true",
      "DD_FLUSH_TO_LOG": "true"
    }
  }
}
TagResource -> arn:aws:lambda:us-east-1:123456789012:function:lambda-1-us-east-1
{
  "dd_sls_ci": "vXXXX"
}
UpdateFunctionConfiguration -> arn:aws:lambda:us-east-1:123456789012:function:lambda-2-us-east-1
{
  "FunctionName": "arn:aws:lambda:us-east-1:123456789012:function:lambda-2-us-east-1",
  "Environment": {
    "Variables": {
      "DD_LAMBDA_HANDLER": "index.handler",
      "DD_SITE": "datadoghq.com",
      "DD_SERVERLESS_APPSEC_ENABLED": "false",
      "DD_CAPTURE_LAMBDA_PAYLOAD": "false",
      "DD_MERGE_XRAY_TRACES": "false",
      "DD_TRACE_ENABLED": "true",
      "DD_FLUSH_TO_LOG": "true"
    }
  }
}
TagResource -> arn:aws:lambda:us-east-1:123456789012:function:lambda-2-us-east-1
{
  "dd_sls_ci": "vXXXX"
}
UpdateFunctionConfiguration -> arn:aws:lambda:us-east-1:123456789012:function:lambda-3-us-east-1
{
  "FunctionName": "arn:aws:lambda:us-east-1:123456789012:function:lambda-3-us-east-1",
  "Environment": {
    "Variables": {
      "DD_LAMBDA_HANDLER": "index.handler",
      "DD_SITE": "datadoghq.com",
      "DD_SERVERLESS_APPSEC_ENABLED": "false",
      "DD_CAPTURE_LAMBDA_PAYLOAD": "false",
      "DD_MERGE_XRAY_TRACES": "false",
      "DD_TRACE_ENABLED": "true",
      "DD_FLUSH_TO_LOG": "true"
    }
  }
}
TagResource -> arn:aws:lambda:us-east-1:123456789012:function:lambda-3-us-east-1
{
  "dd_sls_ci": "vXXXX"
}
UpdateFunctionConfiguration -> arn:aws:lambda:us-east-2:123456789012:function:lambda-1-us-east-2
{
  "FunctionName": "arn:aws:lambda:us-east-2:123456789012:function:lambda-1-us-east-2",
  "Environment": {
    "Variables": {
      "DD_LAMBDA_HANDLER": "index.handler",
      "DD_SITE": "datadoghq.com",
      "DD_SERVERLESS_APPSEC_ENABLED": "false",
      "DD_CAPTURE_LAMBDA_PAYLOAD": "false",
      "DD_MERGE_XRAY_TRACES": "false",
      "DD_TRACE_ENABLED": "true",
      "DD_FLUSH_TO_LOG": "true"
    }
  }
}
TagResource -> arn:aws:lambda:us-east-2:123456789012:function:lambda-1-us-east-2
{
  "dd_sls_ci": "vXXXX"
}
UpdateFunctionConfiguration -> arn:aws:lambda:us-east-2:123456789012:function:lambda-2-us-east-2
{
  "FunctionName": "arn:aws:lambda:us-east-2:123456789012:function:lambda-2-us-east-2",
  "Environment": {
    "Variables": {
      "DD_LAMBDA_HANDLER": "index.handler",
      "DD_SITE": "datadoghq.com",
      "DD_SERVERLESS_APPSEC_ENABLED": "false",
      "DD_CAPTURE_LAMBDA_PAYLOAD": "false",
      "DD_MERGE_XRAY_TRACES": "false",
      "DD_TRACE_ENABLED": "true",
      "DD_FLUSH_TO_LOG": "true"
    }
  }
}
TagResource -> arn:aws:lambda:us-east-2:123456789012:function:lambda-2-us-east-2
{
  "dd_sls_ci": "vXXXX"
}
UpdateFunctionConfiguration -> arn:aws:lambda:us-east-2:123456789012:function:lambda-3-us-east-2
{
  "FunctionName": "arn:aws:lambda:us-east-2:123456789012:function:lambda-3-us-east-2",
  "Environment": {
    "Variables": {
      "DD_LAMBDA_HANDLER": "index.handler",
      "DD_SITE": "datadoghq.com",
      "DD_SERVERLESS_APPSEC_ENABLED": "false",
      "DD_CAPTURE_LAMBDA_PAYLOAD": "false",
      "DD_MERGE_XRAY_TRACES": "false",
      "DD_TRACE_ENABLED": "true",
      "DD_FLUSH_TO_LOG": "true"
    }
  }
}
TagResource -> arn:aws:lambda:us-east-2:123456789012:function:lambda-3-us-east-2
{
  "dd_sls_ci": "vXXXX"
}
[Error] Failed updating arn:aws:lambda:us-east-1:123456789012:function:lambda-1-us-east-1 Error: Unexpected error updating request
[Error] Failed updating arn:aws:lambda:us-east-1:123456789012:function:lambda-2-us-east-1 Error: Unexpected error updating request
[Error] Failed updating arn:aws:lambda:us-east-2:123456789012:function:lambda-1-us-east-2 Error: Unexpected error updating request
[!] Updated 3 Lambda functions.

"
`;

exports[`lambda uninstrument execute uninstrument multiple functions interactively 1`] = `
"
🐶 Uninstrumenting Lambda function
[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

[!] Functions to be updated:
	- arn:aws:lambda:sa-east-1:123456789012:function:lambda-hello-world
	- arn:aws:lambda:sa-east-1:123456789012:function:lambda-hello-world-2

Will apply the following updates:
UpdateFunctionConfiguration -> arn:aws:lambda:sa-east-1:123456789012:function:lambda-hello-world
{
  "FunctionName": "arn:aws:lambda:sa-east-1:123456789012:function:lambda-hello-world",
  "Handler": "lambda_function.lambda_handler",
  "Environment": {
    "Variables": {
      "USER_VARIABLE": "sh**********tion"
    }
  },
  "Layers": []
}
UpdateFunctionConfiguration -> arn:aws:lambda:sa-east-1:123456789012:function:lambda-hello-world-2
{
  "FunctionName": "arn:aws:lambda:sa-east-1:123456789012:function:lambda-hello-world-2",
  "Handler": "lambda_function.lambda_handler",
  "Environment": {
    "Variables": {}
  },
  "Layers": []
}
[!] Confirmation needed.
[!] Uninstrumenting functions.
✔ Updated 2 Lambda functions.

"
`;

exports[`lambda uninstrument execute uninstrument multiple specified functions interactively 1`] = `
"
🐶 Uninstrumenting Lambda function
[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

[!] Functions to be updated:
	- arn:aws:lambda:sa-east-1:123456789012:function:lambda-hello-world
	- arn:aws:lambda:sa-east-1:123456789012:function:lambda-hello-world-2

Will apply the following updates:
UpdateFunctionConfiguration -> arn:aws:lambda:sa-east-1:123456789012:function:lambda-hello-world
{
  "FunctionName": "arn:aws:lambda:sa-east-1:123456789012:function:lambda-hello-world",
  "Handler": "lambda_function.lambda_handler",
  "Environment": {
    "Variables": {
      "USER_VARIABLE": "sh**********tion"
    }
  },
  "Layers": []
}
UpdateFunctionConfiguration -> arn:aws:lambda:sa-east-1:123456789012:function:lambda-hello-world-2
{
  "FunctionName": "arn:aws:lambda:sa-east-1:123456789012:function:lambda-hello-world-2",
  "Handler": "lambda_function.lambda_handler",
  "Environment": {
    "Variables": {}
  },
  "Layers": []
}
[!] Confirmation needed.
[!] Uninstrumenting functions.
✔ Updated 2 Lambda functions.

"
`;
